# LinuxUserspaceEmulator

./: .gitignore  CMakeLists.txt  ELFCommon.h  ELFLoader.cpp  ELFLoader.h  ELFSymbols.cpp  ELFSymbols.h  Emulator.cpp  Emulator.h  LinuxSyscalls.cpp  LinuxSyscalls.h  README.md  SoftCPU64.cpp  SoftCPU64.h  SoftMMU.cpp  SoftMMU.h  TODO.txt  Types.h  ValueWithShadow.h  main.cpp
build-smoke/: CMakeCache.txt  LinuxUserspaceEmulator  Makefile  cmake_install.cmake
tests/: args-env.c  cat-static.c  fs-tls.S  hello  hello-c.c  hello-static.S  host-signal.c  mmap-brk.c  region-dump.c  region-types.c  run-smoke.sh  shadow-memory.c  signal-basic.c  symbol-backtrace.c  syscall-coverage.c
